Started slider in gallery page

--- a/contacts_santo_tirso.html
+++ b/contacts_santo_tirso.html
@@ -154,7 +154,7 @@
                 </ul>
             </ul>
         </nav>
-        <div class="phone slide-in">
+        <div class="phone">
             <span class="first">Ligue-nos:</span>
             <a href="tel:00351225432135">
                 <address>225 432 135</address>
@@ -162,7 +162,7 @@
             <a href="tel:00351915424413">
                 <address>915 424 413</address>
             </a>
-            <p>Disponível 24h</p>
+            <p>Atendimento telefónico<br>de urgência 24h</p>
         </div>
     </header>
 
@@ -191,7 +191,8 @@
                 molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
             <div id="map"></div>
             <address class="our-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                <span>Rua D. Nuno Alvares Pereira 11, 1º sala<br />8 St. Tirso</span>
+                <a href="https://www.google.com/maps/dir/?api=1&travelmode=driving&layer=traffic&destination=41.34035341648697,-8.477143117721402"
+                    target="_blank"><span>Rua D. Nuno Alvares Pereira 11, 1º sala<br />8 St. Tirso</span></a>
             </address>
             <address class="contacts-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                 <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135">+351
@@ -201,6 +202,18 @@
                     <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                 </span>
             </address>
+            <div class="schedule">
+                <h3>Horario:</h3>
+                <ul>
+                    <li><strong>Segunda-feira:</strong> 14h-20h</li>
+                    <li><strong>Terça-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
+                    <li><strong>Quarta-feira:</strong> 09h-14h</li>
+                    <li><strong>Quinta-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
+                    <li><strong>Sexta-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
+                    <li><strong>Sábado:</strong> Encerrado (exceto para atendimento telefónico)</li>
+                    <li><strong>Domingo:</strong> Encerrado</li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -237,7 +250,7 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
         <div class="privacy-block wow fade-in">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
