--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
                 </ul>
             </ul>
         </nav>
-        <div class="phone slide-in">
+        <div class="phone">
             <span class="first">Ligue-nos:</span>
             <a href="tel:00351225432135">
                 <address>225 432 135</address>
@@ -159,7 +159,7 @@
             <a href="tel:00351915424413">
                 <address>915 424 413</address>
             </a>
-            <p>Disponível 24h</p>
+            <p>Atendimento telefónico<br>de urgência 24h</p>
         </div>
     </header>
 
@@ -312,6 +312,66 @@
                 </span>
             </div>
         </div>
+        <div class="backgroundCover"></div>
+        <div class="slider">
+            <div class="wrapper">
+                <div class="slides">
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1662.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1675.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1687.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1711.jpg" alt="Corredor" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1714.jpg" alt="Sala de Pediatria" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1720.jpg" alt="Sala de Pediatria" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1725.jpg" alt="Sala de Pediatria" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1732.jpg" alt="Sala de Exames" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1737.jpg" alt="Sala de Exames" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1782.jpg" alt="Copa" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1790.jpg" alt="Quarto de Banho" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebePorto/EVO_1795.jpg" alt="Sala de Esterilização" />
+                    </span>
+                </div>
+            </div>
+            <a class="control prev"></a>
+            <a class="control next"></a>
+        </div>
     </section>
 
 
@@ -348,13 +408,14 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
         <div class="privacy-block wow fade-in">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
     <script src="js/app.js"></script>
     <script src="js/intersectionObservers.js"></script>
     <script src="js/headerNavbar.js"></script>
+    <script src="js/carousel.js"></script>
     <script src="js/gallery.js"></script>
 </body>
 
