--- a/specialties.html
+++ b/specialties.html
@@ -135,7 +135,7 @@
                 </ul>
             </ul>
         </nav>
-        <div class="phone slide-in">
+        <div class="phone">
             <span class="first">Ligue-nos:</span>
             <a href="tel:00351225432135">
                 <address>225 432 135</address>
@@ -143,7 +143,7 @@
             <a href="tel:00351915424413">
                 <address>915 424 413</address>
             </a>
-            <p>Disponível 24h</p>
+            <p>Atendimento telefónico<br>de urgência 24h</p>
         </div>
     </header>
 
@@ -476,7 +476,7 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
         <div class="privacy-block wow fade-in">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
