--- a/agreements.html
+++ b/agreements.html
@@ -151,7 +151,7 @@
         </ul>
       </ul>
     </nav>
-    <div class="phone slide-in">
+    <div class="phone">
       <span class="first">Ligue-nos:</span>
       <a href="tel:00351225432135">
         <address>225 432 135</address>
@@ -159,7 +159,7 @@
       <a href="tel:00351915424413">
         <address>915 424 413</address>
       </a>
-      <p>Disponível 24h</p>
+      <p>Atendimento telefónico<br>de urgência 24h</p>
     </div>
   </header>
 
@@ -424,7 +424,8 @@
       dolore
       magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
     <div class="privacy-block fade-in">
-      <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a href="privacy.html">Política
+      <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+        href="privacy.html">Política
         de Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
   </footer>
