--- a/galleryST.html
+++ b/galleryST.html
@@ -151,7 +151,7 @@
                 </ul>
             </ul>
         </nav>
-        <div class="phone slide-in">
+        <div class="phone">
             <span class="first">Ligue-nos:</span>
             <a href="tel:00351225432135">
                 <address>225 432 135</address>
@@ -159,7 +159,7 @@
             <a href="tel:00351915424413">
                 <address>915 424 413</address>
             </a>
-            <p>Disponível 24h</p>
+            <p>Atendimento telefónico<br>de urgência 24h</p>
         </div>
     </header>
 
@@ -244,6 +244,36 @@
                 </span>
             </div>
         </div>
+        <div class="backgroundCover"></div>
+        <div class="slider">
+            <div class="wrapper">
+                <div class="slides">
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1810.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1813.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1818.jpg" alt="Sala de Espera" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1826.jpg" alt="Logo" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                    <span class="slide">
+                        <img src="images/gynebeST/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    </span>
+                </div>
+            </div>
+            <a class="control prev"></a>
+            <a class="control next"></a>
+        </div>
     </section>
 
 
@@ -280,13 +310,14 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
         <div class="privacy-block wow fade-in">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
     <script src="js/app.js"></script>
     <script src="js/intersectionObservers.js"></script>
     <script src="js/headerNavbar.js"></script>
+    <script src="js/carousel.js"></script>
     <script src="js/gallery.js"></script>
 </body>
 
