--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </ul>
             </ul>
         </nav>
-        <div class="phone slide-in">
+        <div class="phone">
             <span class="first">Ligue-nos:</span>
             <a href="tel:00351225432135">
                 <address>225 432 135</address>
@@ -158,7 +158,7 @@
             <a href="tel:00351915424413">
                 <address>915 424 413</address>
             </a>
-            <p>Disponível 24h</p>
+            <p>Atendimento telefónico<br>de urgência 24h</p>
         </div>
     </header>
 
@@ -174,7 +174,7 @@
                 <span class="second">inspirada por si</span>
             </div>
         </div>
-        <div class="wrapper1">
+        <!-- <div class="wrapper1">
             <div class="slider">
                 <div class="wrapper">
                     <div class="slides">
@@ -198,7 +198,7 @@
                 <a class="control prev"></a>
                 <a class="control next"></a>
             </div>
-        </div>
+        </div> -->
         <div id="wrapper2" class="wrapper2 wrapper2__inset1">
             <div class="heading1 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                 <h2>A nossa Missão</h2>
@@ -268,12 +268,12 @@
                     <h3>
                         <a>Dra. Marta Baltar</a>
                     </h3>
-                    <p>Psicologa/Psicoterapeuta</p>
+                    <p>Psicóloga/Psicoterapeuta</p>
                 </div>
                 <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                     <img src="images/page1_img7.png" alt="" />
                     <h3>
-                        <a>Secretaria</a>
+                        <a>Filipa Gomes</a>
                     </h3>
                     <p>Assistente Operacional</p>
                 </div>
@@ -282,7 +282,7 @@
                     <h3>
                         <a>Francisco Araújo</a>
                     </h3>
-                    <p>Assistente Operacional</p>
+                    <p>Assistente Informático</p>
                 </div>
             </div>
         </div>
@@ -396,12 +396,12 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
         <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year"></span>. <a
+            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
     <script src="js/app.js"></script>
-    <script src="js/carousel.js"></script>
+    <!-- <script src="js/carousel.js"></script> -->
     <script src="js/intersectionObservers.js"></script>
     <script src="js/headerNavbar.js"></script>
 </body>
